rust/macros/tests/invalid/target/debug/deps/double_commas-f075a296d78cec8c.d
/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/double_commas-f075a296d78cec8c.d: double_commas.rs Cargo.toml

/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/libdouble_commas-f075a296d78cec8c.rmeta: double_commas.rs Cargo.toml

double_commas.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
